--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Esconha da premiação</title>
 </head>
 <body>
+  <main>
+    <div>
+<p>participaremos de uma competição das platafomas 2024, se ganharmos teremos que escolher o prÊmio</p>
+<button>parque da contura</button>
+<div>
+
     
+
+  </main> 
 </body>
 </html>
