--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esconha da premiação</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Esconha da premiação</title>
 </head>
+
 <body>
   <main>
-    <div>
-<p>participaremos de uma competição das platafomas 2024, se ganharmos teremos que escolher o prÊmio</p>
-<button>parque da contura</button>
-<div>
+    <div class="passo"  id="passo 0">
+      <p>participaremos de uma competição das platafomas 2024, se ganharmos teremos que escolher o prÊmio</p>
+      <button class="btn-proximo" data-proximo="1">parque da cultura</button>
+      <button class="btn-proximo" data-proximo="2">passeio pedagogico</button>
+      <div>
+        <div class="passo"  id="passo 0">
+          <p>Temos duas opções e deveremos escolher apenas uma.</p>
+          <button class="btn-proximo" data-proximo="3">piquenique</button>
+          <button class="btn-proximo" data-proximo="4">esporte</button>
+          <div>
 
-    
 
-  </main> 
+  </main>
 </body>
+
 </html>
