--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
           <button class="btn-proximo" data-proximo="3">piquenique</button>
           <button class="btn-proximo" data-proximo="4">esporte</button>
           <div>
-
-
-  </main>
+      </main>
+      <script src="script.js"></script>
 </body>
 
 </html>
